--- a/Projects/TaskDistributionTestJava/TDT.SpiceWorker/src/main/resources/SpiceWorker.conf
+++ b/Projects/TaskDistributionTestJava/TDT.SpiceWorker/src/main/resources/SpiceWorker.conf
@@ -1,1 +1,2 @@
-SpiceLib.NativeExecPath = "C://Users/aalbert/Desktop/JNISpice.dll"
+; SpiceLib.NativeExecPath = "C://Users/aalbert/Desktop/JNISpice.dll"
+SpiceLib.NativeExecPath = "/usr/local/JNISpice/lib/libJNISpice.so"
