--- a/Projects/TaskDistributionTestJava/TDT/build.gradle
+++ b/Projects/TaskDistributionTestJava/TDT/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     implementation("io.grpc:grpc-core:${grpcVersion}")
     implementation("io.grpc:grpc-protobuf:${grpcVersion}")
     implementation("io.grpc:grpc-netty:${grpcVersion}")
+    implementation("javax.annotation:javax.annotation-api:1.3.2")
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
 }
