test new fatjar

--- a/Projects/TaskDistributionTestJava/TDT.SpiceWorker/build.gradle
+++ b/Projects/TaskDistributionTestJava/TDT.SpiceWorker/build.gradle
@@ -34,11 +34,11 @@ jar {
     }
 }
 
-task customFatJar(type: Jar) {
+task fatjar(type: Jar) {
     manifest {
         attributes 'Main-Class': 'org.Main.App'
     }
-    baseName = 'all-in-one-jar'
+    baseName = 'SpiceWorker'
     from {
         configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it)}
@@ -56,5 +56,4 @@ dependencies {
     implementation 'com.typesafe:config:1.4.0'
     implementation fileTree(include: ['*.jar'], dir: 'libs/JNISpiceLib')
     implementation project(":TDT")
-    compileClasspath files('/usr/local/JNISpice/src/JNISpice')
 }
