--- a/Projects/TaskDistributionTestJava/TDT.SpiceWorker/src/main/resources/SpiceWorker.conf
+++ b/Projects/TaskDistributionTestJava/TDT.SpiceWorker/src/main/resources/SpiceWorker.conf
@@ -1,2 +1,5 @@
-; SpiceLib.NativeExecPath = "C://Users/aalbert/Desktop/JNISpice.dll"
-SpiceLib.NativeExecPath = "/usr/local/JNISpice/lib/libJNISpice.so"
+SpiceLib.NativeExecPaths = [
+    "/usr/local/JNISpice/lib/libJNISpice.so",
+    "/usr/local/JNISpice/lib/libJNISpice.dll",
+    "C://Users/aalbert/Desktop/JNISpice.dll"
+]
