--- a/Projects/TaskDistributionTestJava/TDT.SpiceEngine/build.gradle
+++ b/Projects/TaskDistributionTestJava/TDT.SpiceEngine/build.gradle
@@ -20,7 +20,13 @@ repositories {
     mavenCentral()
 }
 
+def grpcVersion = '1.32.1'
+
 dependencies {
+    implementation("io.grpc:grpc-stub:${grpcVersion}")
+    implementation("io.grpc:grpc-core:${grpcVersion}")
+    implementation("io.grpc:grpc-protobuf:${grpcVersion}")
+    implementation("io.grpc:grpc-netty:${grpcVersion}")
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
     implementation project(":TDT")
