--- a/.gitignore
+++ b/.gitignore
@@ -283,3 +283,5 @@ project.lock.json
 /ArdNetAppClient/ArdNetAppClient/Entitlements.plist
 /ArdNetAppClient/ArdNetAppClient/Info.plist
 *.pubxml
+
+.gradle/
