added proto for furnsh command

--- a/Projects/grpcSpicePrototype/build.gradle
+++ b/Projects/grpcSpicePrototype/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     runtimeOnly "io.grpc:grpc-netty-shaded:${grpcVersion}"
 
     // path to a JNISpice.jar file
-    compile files('./JNISpice.jar')
+    compile files('C:/Users/nicho/Class/JNISpice/src/JNISpice')
 }
 
 protobuf {
